# coding-partner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
coding_partner/: CLAUDE.md  cli.py  config.py  feishu_client.py  formatter.py  main.py  store.py  worker.py  worker_manager.py
coding_partner/handlers/: dm.py  group.py
coding_partner/services/: agent_runner.py  claude_runner.py  codex_runner.py  group_manager.py  repo_scanner.py  worktree.py
scripts/: install-docker.sh  install.sh  setup.sh
systemd/: coding-partner.service  coding-partner.service.template
