[project]
name = "coding-partner"
version = "0.1.0"
description = "Feishu bot for vibe coding with Claude Code via mobile"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
coding-partner = "coding_partner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coding_partner"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
